# projeto-final-adriana_elias_vagner_tinyml

./: .gitignore  CMakeLists.txt  CMakeLists_back.txt  README.md  main.c
.cache/clangd/index/: FreeRTOS.h.5F9FD7522A822EE7.idx  FreeRTOSConfig.h.97ACEDA1E23FABA5.idx  button_a.c.89C6AB57B49BFA88.idx  button_a.h.018AC86D7E9BC4AF.idx  button_b.c.6A1EA0E30B624617.idx  button_b.h.BF24ABE6ED8B8D75.idx  button_j.c.5105E4B0006879BE.idx  button_j.h.629237C5B4E3A61A.idx  config.h.188D1B5B5AF4D2BF.idx  croutine.c.90BF528ECA6327B1.idx  croutine.h.9CC68093752BE84E.idx  ctrl.c.FFA1BB87E2E22874.idx  ctrl.h.B1F293D9DBEBC847.idx  deprecated_definitions.h.98677C650CB4C31D.idx  display.c.BFFA9B5A94918838.idx  display.h.57CBA52CB3BD729C.idx  display_gate.c.A6CA66E471259124.idx  display_gate.h.4561DD836C90D8BA.idx  event_groups.c.8929C38014B62BD7.idx  event_groups.h.39655CDF2B601ED6.idx  font.h.BDDF768F9B190EFD.idx  freertos_sdk_config.h.DBB25095EBE8C9AD.idx  heap_4.c.4185D6DAED6E65D9.idx  i2c.c.2B3EF226D2E61517.idx  i2c.c.2D72E829FE1803A3.idx  i2c.h.0598813B7173BC2E.idx  i2c.h.7662C6D0EBDF8EE1.idx  led_rgb.c.F761F1487696CB36.idx  led_rgb.h.9D1DA644F6383ED7.idx  list.c.444EB601A8AE3E1C.idx  list.h.203040D8E01F9E61.idx  main.c.065C518B4391D21A.idx  main.c.28BC2A060431A013.idx  mpu.c.618871CCA458AE58.idx  mpu.h.E4D1C8EC32FE6EAA.idx  mpu6050_i2c.c.2A2AE47AEB1A4283.idx  mpu6050_i2c.h.A19E2180F1D5590E.idx  mpu6500.c.E1DE90629EEF4918.idx  mpu6500.h.D89A4C5C2C29C7FE.idx  mpu6500_i2c.c.1D2DA4EDD27A41A4.idx  (+25 more)
Etapa 1/: README.md
Etapa 2/: README.md
Etapa 3/: README.md
Etapa 4/: CMakeLists.txt  Final_Projeto.c  README.md  main.c
Etapa 4/FreeRTOS/: event_groups.c  stream_buffer.c  tasks.c
Etapa 4/FreeRTOS/include/: FreeRTOSConfig.h  freertos_hooks.c
Etapa 4/FreeRTOS/portable/: CMakeLists.txt
Etapa 4/FreeRTOS/portable/GCC/ARM_CMO/: port.c
Etapa 4/include/: button_a.h  button_b.h  button_j.h  config.h  ctrl.h  display_gate.h  ml.h  mpu6050.h  util.h
Etapa 4/lib/: ssd1306.h  ssd1306_font.h  ssd1306_i2c.c
Etapa 4/lib/paho.mqtt.embedded/MQTTClient-C/src/: MQTTClient.h  paho_timer.h  transport.c
Etapa 4/model-parameters/: model_metadata.h
Etapa 4/pico-sdk/: cmake_install.cmake
Etapa 4/pico-sdk/docs/: cmake_install.cmake
Etapa 4/pico-sdk/src/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/boot_picobin_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/boot_picoboot_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/boot_uf2_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/hardware_claim/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_base_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_bit_ops_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_divider_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_stdlib_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_sync/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_time/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_usb_reset_interface_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/common/pico_util/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2040/boot_stage2/: bs2_default.dis  bs2_default.elf  bs2_default_padded_checksummed.S  cmake_install.cmake
Etapa 4/pico-sdk/src/rp2040/hardware_regs/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2040/hardware_structs/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2040/pico_platform/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/boot_bootrom_headers/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/cmsis/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_adc/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_base/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_boot_lock/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_clocks/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_divider/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_dma/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_exception/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_flash/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_gpio/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_i2c/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_interp/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_irq/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_pio/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_pll/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_pwm/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_resets/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_rtc/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_spi/: cmake_install.cmake
Etapa 4/pico-sdk/src/rp2_common/hardware_sync/: cmake_install.cmake
Etapa 4/pico-sdk/tools/: cmake_install.cmake
Etapa 4/src/: button_a.c  button_b.c  button_j.c  ctrl.c  display_gate.c  freertos_hooks.c  led_rgb.c  lwipopts.h  ml.cpp  mpu6050.c  mqtt_task.c  paho_network.c  paho_network.h  paho_timer.c  paho_timer.h  util.c
Etapa 4/src/oled/: display.c  display.h  display_gate.c  i2c.c
Etapa 4/tflite-model/: tflite_learn_777509_7_compiled.h
include/: button_a.h  button_b.h  button_j.h  config.h  ctrl.h  display_gate.h  led_rgb.h  lwipopts.h  mpu.h  mpu6500.h  mqtt_task.h  paho_network.h  paho_timer.h  util.h  wifi_config.h
lib/: ssd1306.h  ssd1306_font.h  ssd1306_i2c.c
model-parameters/: model_variables.h
src/: button_a.c  button_b.c  button_j.c  ctrl.c  display_gate.c  led_rgb.c  main.c  main.cpp  ml.cpp  mpu.c  mpu6500.c  mqtt_task.c  paho_network.c  paho_timer.c  util.c
src/oled/: display.c  display.h
tflite-model/: tflite_learn_777509_7_compiled.cpp
(+56 files in other folders)
